implemented get pool txs endpoint
